--- a/style.css
+++ b/style.css
@@ -143,12 +143,13 @@ input{
   align-items: flex-end; 
   justify-content: center;
   padding: 0.5rem;
+  padding-inline: 1.5rem;
   flex-wrap: nowrap;
   gap: 2px;
   margin: 0.5rem auto;
   box-shadow: rgba(0, 0, 0, 0.5) 0px 1px 4px;
   width: calc(100% - 1rem);
-  max-width: 1480px;
+  max-width: 1360px;
   height: 100%;
   background-color: #fff;
   overflow-x: hidden;
@@ -157,8 +158,8 @@ input{
 .cell {
   flex-grow: 1;
   display: flex;
-  border-top-left-radius: 20px;
-  border: 1px solid #FF3CAC;
+  border-top-left-radius: 2rem;
+  border-top-right-radius: 2rem;
   background-color: #6A0572;
   resize: horizontal;
   position: relative;
